--- a/RICS_Qt/resources.qrc
+++ b/RICS_Qt/resources.qrc
@@ -11,5 +11,7 @@
         <file>fetch.png</file>
         <file>settings.png</file>
         <file>tutorials.png</file>
+        <file>claw_right.png</file>
+        <file>claw_left.png</file>
     </qresource>
 </RCC>
