--- a/RICS_Qt/mainwindow.ui
+++ b/RICS_Qt/mainwindow.ui
@@ -24,7 +24,7 @@
        <string notr="true">background: rgba(51, 64, 88, 0%);</string>
       </property>
       <property name="currentIndex">
-       <number>3</number>
+       <number>4</number>
       </property>
       <widget class="QWidget" name="startPage">
        <property name="styleSheet">
@@ -797,6 +797,54 @@ border-style: solid;
           <width>400</width>
           <height>400</height>
          </size>
+        </property>
+       </widget>
+      </widget>
+      <widget class="QWidget" name="countdown">
+       <widget class="QLabel" name="countdownLabel">
+        <property name="geometry">
+         <rect>
+          <x>0</x>
+          <y>30</y>
+          <width>601</width>
+          <height>151</height>
+         </rect>
+        </property>
+        <property name="font">
+         <font>
+          <pointsize>150</pointsize>
+          <weight>75</weight>
+          <bold>true</bold>
+         </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background: rgb(67, 83, 106);
+qproperty-alignment: AlignCenter;</string>
+        </property>
+        <property name="text">
+         <string>5</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="countdownLabel2">
+        <property name="geometry">
+         <rect>
+          <x>0</x>
+          <y>180</y>
+          <width>611</width>
+          <height>141</height>
+         </rect>
+        </property>
+        <property name="font">
+         <font>
+          <pointsize>50</pointsize>
+         </font>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background: rgb(67, 83, 106);
+qproperty-alignment: AlignCenter;</string>
+        </property>
+        <property name="text">
+         <string>SECONDS REMAINING</string>
         </property>
        </widget>
       </widget>
