--- a/RICS_Qt/resources.qrc
+++ b/RICS_Qt/resources.qrc
@@ -15,5 +15,6 @@
         <file>claw_left.png</file>
         <file>tutorial_page.png</file>
         <file>settings-title.png</file>
+        <file>controls.png</file>
     </qresource>
 </RCC>
