--- a/RICS_Qt/mainwindow.ui
+++ b/RICS_Qt/mainwindow.ui
@@ -24,7 +24,7 @@
        <string notr="true">background: rgba(51, 64, 88, 0%);</string>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>4</number>
       </property>
       <widget class="QWidget" name="startPage">
        <property name="styleSheet">
@@ -500,6 +500,19 @@ border-style: solid;
           <width>60</width>
           <height>60</height>
          </size>
+        </property>
+       </widget>
+       <widget class="QHoverSensitiveButton" name="stopButton">
+        <property name="geometry">
+         <rect>
+          <x>470</x>
+          <y>110</y>
+          <width>113</width>
+          <height>32</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>Stop</string>
         </property>
        </widget>
       </widget>
