--- a/RICS_Qt/mainwindow.ui
+++ b/RICS_Qt/mainwindow.ui
@@ -24,7 +24,7 @@
        <string notr="true">background: rgba(51, 64, 88, 0%);</string>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="startPage">
        <property name="styleSheet">
@@ -197,8 +197,8 @@ border-style: solid;
        <widget class="QHoverSensitiveButton" name="releaseButton">
         <property name="geometry">
          <rect>
-          <x>420</x>
-          <y>230</y>
+          <x>790</x>
+          <y>390</y>
           <width>162</width>
           <height>102</height>
          </rect>
@@ -236,8 +236,8 @@ border-style: solid;
          <rect>
           <x>20</x>
           <y>10</y>
-          <width>91</width>
-          <height>41</height>
+          <width>141</width>
+          <height>71</height>
          </rect>
         </property>
         <property name="styleSheet">
@@ -253,18 +253,18 @@ border: solid;</string>
         </property>
         <property name="iconSize">
          <size>
-          <width>60</width>
-          <height>60</height>
+          <width>100</width>
+          <height>100</height>
          </size>
         </property>
        </widget>
        <widget class="QHoverSensitiveButton" name="forwardButton">
         <property name="geometry">
          <rect>
-          <x>30</x>
-          <y>200</y>
-          <width>161</width>
-          <height>71</height>
+          <x>50</x>
+          <y>270</y>
+          <width>211</width>
+          <height>101</height>
          </rect>
         </property>
         <property name="styleSheet">
@@ -281,17 +281,17 @@ border: solid;</string>
         </property>
         <property name="iconSize">
          <size>
-          <width>100</width>
-          <height>100</height>
+          <width>150</width>
+          <height>150</height>
          </size>
         </property>
        </widget>
        <widget class="QHoverSensitiveButton" name="backwardButton">
         <property name="geometry">
          <rect>
-          <x>30</x>
-          <y>270</y>
-          <width>161</width>
+          <x>50</x>
+          <y>380</y>
+          <width>211</width>
           <height>91</height>
          </rect>
         </property>
@@ -309,18 +309,18 @@ border: solid;</string>
         </property>
         <property name="iconSize">
          <size>
-          <width>100</width>
-          <height>100</height>
+          <width>150</width>
+          <height>150</height>
          </size>
         </property>
        </widget>
        <widget class="QHoverSensitiveButton" name="upButton">
         <property name="geometry">
          <rect>
-          <x>250</x>
-          <y>70</y>
-          <width>111</width>
-          <height>51</height>
+          <x>400</x>
+          <y>110</y>
+          <width>171</width>
+          <height>71</height>
          </rect>
         </property>
         <property name="styleSheet">
@@ -337,18 +337,18 @@ border: solid;</string>
         </property>
         <property name="iconSize">
          <size>
-          <width>80</width>
-          <height>75</height>
+          <width>120</width>
+          <height>120</height>
          </size>
         </property>
        </widget>
        <widget class="QHoverSensitiveButton" name="leftButton">
         <property name="geometry">
          <rect>
-          <x>160</x>
-          <y>80</y>
-          <width>71</width>
-          <height>101</height>
+          <x>290</x>
+          <y>130</y>
+          <width>101</width>
+          <height>131</height>
          </rect>
         </property>
         <property name="styleSheet">
@@ -365,7 +365,7 @@ border: solid;</string>
         </property>
         <property name="iconSize">
          <size>
-          <width>60</width>
+          <width>100</width>
           <height>120</height>
          </size>
         </property>
@@ -373,10 +373,10 @@ border: solid;</string>
        <widget class="QHoverSensitiveButton" name="rightButton">
         <property name="geometry">
          <rect>
-          <x>380</x>
-          <y>80</y>
-          <width>71</width>
-          <height>101</height>
+          <x>590</x>
+          <y>130</y>
+          <width>91</width>
+          <height>131</height>
          </rect>
         </property>
         <property name="styleSheet">
@@ -393,7 +393,7 @@ border: solid;</string>
         </property>
         <property name="iconSize">
          <size>
-          <width>60</width>
+          <width>100</width>
           <height>120</height>
          </size>
         </property>
@@ -401,10 +401,10 @@ border: solid;</string>
        <widget class="QHoverSensitiveButton" name="downButton">
         <property name="geometry">
          <rect>
-          <x>250</x>
-          <y>140</y>
-          <width>111</width>
-          <height>51</height>
+          <x>400</x>
+          <y>210</y>
+          <width>171</width>
+          <height>81</height>
          </rect>
         </property>
         <property name="styleSheet">
@@ -421,16 +421,16 @@ border: solid;</string>
         </property>
         <property name="iconSize">
          <size>
-          <width>80</width>
-          <height>75</height>
+          <width>120</width>
+          <height>120</height>
          </size>
         </property>
        </widget>
        <widget class="QLabel" name="ready_label">
         <property name="geometry">
          <rect>
-          <x>200</x>
-          <y>10</y>
+          <x>390</x>
+          <y>20</y>
           <width>201</width>
           <height>31</height>
          </rect>
@@ -448,8 +448,8 @@ color: white;
        <widget class="QHoverSensitiveButton" name="clawLeft">
         <property name="geometry">
          <rect>
-          <x>210</x>
-          <y>230</y>
+          <x>480</x>
+          <y>370</y>
           <width>91</width>
           <height>81</height>
          </rect>
@@ -477,8 +477,8 @@ background-color: rgb(183, 183, 183);
        <widget class="QHoverSensitiveButton" name="clawRight">
         <property name="geometry">
          <rect>
-          <x>310</x>
-          <y>230</y>
+          <x>620</x>
+          <y>370</y>
           <width>91</width>
           <height>81</height>
          </rect>
@@ -500,6 +500,82 @@ border-style: solid;
           <width>60</width>
           <height>60</height>
          </size>
+        </property>
+       </widget>
+       <widget class="QLabel" name="ready_label_2">
+        <property name="geometry">
+         <rect>
+          <x>440</x>
+          <y>70</y>
+          <width>91</width>
+          <height>31</height>
+         </rect>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">qproperty-alignment: AlignCenter;
+font: 20pt &quot;.Helvetica Neue DeskInterface&quot;;
+color: white;
+</string>
+        </property>
+        <property name="text">
+         <string>Rise</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="ready_label_3">
+        <property name="geometry">
+         <rect>
+          <x>680</x>
+          <y>180</y>
+          <width>91</width>
+          <height>31</height>
+         </rect>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">qproperty-alignment: AlignCenter;
+font: 20pt &quot;.Helvetica Neue DeskInterface&quot;;
+color: white;
+</string>
+        </property>
+        <property name="text">
+         <string>Right</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="ready_label_4">
+        <property name="geometry">
+         <rect>
+          <x>440</x>
+          <y>300</y>
+          <width>91</width>
+          <height>31</height>
+         </rect>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">qproperty-alignment: AlignCenter;
+font: 20pt &quot;.Helvetica Neue DeskInterface&quot;;
+color: white;
+</string>
+        </property>
+        <property name="text">
+         <string>Down</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="ready_label_5">
+        <property name="geometry">
+         <rect>
+          <x>210</x>
+          <y>180</y>
+          <width>91</width>
+          <height>31</height>
+         </rect>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">qproperty-alignment: AlignCenter;
+font: 20pt &quot;.Helvetica Neue DeskInterface&quot;;
+color: white;
+</string>
+        </property>
+        <property name="text">
+         <string>Left</string>
         </property>
        </widget>
       </widget>
