--- a/RICS_Qt/mainwindow.ui
+++ b/RICS_Qt/mainwindow.ui
@@ -24,7 +24,7 @@
        <string notr="true">background: rgba(51, 64, 88, 0%);</string>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>4</number>
       </property>
       <widget class="QWidget" name="startPage">
        <property name="styleSheet">
@@ -880,8 +880,8 @@ border-style: solid;
        <widget class="QLabel" name="countdownLabel">
         <property name="geometry">
          <rect>
-          <x>0</x>
-          <y>30</y>
+          <x>180</x>
+          <y>90</y>
           <width>601</width>
           <height>151</height>
          </rect>
@@ -895,7 +895,9 @@ border-style: solid;
         </property>
         <property name="styleSheet">
          <string notr="true">background: rgb(67, 83, 106);
-qproperty-alignment: AlignCenter;</string>
+qproperty-alignment: AlignCenter;
+color: white;
+</string>
         </property>
         <property name="text">
          <string>5</string>
@@ -904,8 +906,8 @@ qproperty-alignment: AlignCenter;</string>
        <widget class="QLabel" name="countdownLabel2">
         <property name="geometry">
          <rect>
-          <x>0</x>
-          <y>180</y>
+          <x>180</x>
+          <y>240</y>
           <width>611</width>
           <height>151</height>
          </rect>
@@ -917,7 +919,8 @@ qproperty-alignment: AlignCenter;</string>
         </property>
         <property name="styleSheet">
          <string notr="true">background: rgb(67, 83, 106);
-qproperty-alignment: AlignCenter;</string>
+qproperty-alignment: AlignCenter;
+color: white;</string>
         </property>
         <property name="text">
          <string>SECONDS REMAINING</string>
