--- a/RICS_Qt/mainwindow.ui
+++ b/RICS_Qt/mainwindow.ui
@@ -30,7 +30,7 @@
        <property name="styleSheet">
         <string notr="true">background: rgb(67, 83, 106)</string>
        </property>
-       <widget class="QHoverSensitiveButton" name="fetchButton">
+       <widget class="QHoverSensitiveButton" name="commandButton">
         <property name="geometry">
          <rect>
           <x>170</x>
@@ -513,6 +513,19 @@ border-style: solid;
         </property>
         <property name="text">
          <string>Stop</string>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="fetchButton">
+        <property name="geometry">
+         <rect>
+          <x>440</x>
+          <y>180</y>
+          <width>113</width>
+          <height>51</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>FETCH</string>
         </property>
        </widget>
       </widget>
