--- a/RICS_Qt/resources.qrc
+++ b/RICS_Qt/resources.qrc
@@ -18,5 +18,6 @@
         <file>controls.png</file>
         <file>away.png</file>
         <file>near.png</file>
+        <file>cancel.png</file>
     </qresource>
 </RCC>
